login & sign Up

--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
           <h1>Signup</h1>
         </div>
 
-        <div class="d-flex flex-column align-items-center mt-3">
+        <form id="signUpform" class="d-flex flex-column align-items-center mt-3">
           <label for="name">
             Name: <input type="text" id="name" class="input" required />
           </label>
@@ -49,8 +49,8 @@
             <input type="password" id="password" class="input" required />
           </label>
           <br />
-          <button class="button" onclick="signup() ;">Signup</button>
-        </div>
+          <button class="button">Signup</button>
+        </form>
       </div>
     </main>
 
