--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
           <h1>Login</h1>
         </div>
 
-        <div class="d-flex flex-column align-items-center mt-3">
+        <form  onsubmit="login(); return false" class="d-flex flex-column align-items-center mt-3">
           <label for="inputEmail">
             Email: <input type="email" id="inputEmail" class="input" required />
           </label>
@@ -44,8 +44,8 @@
             <input type="password" id="inputPassword" class="input" required />
           </label>
           <br />
-          <button class="button" onclick="login()">Login</button>
-        </div>
+          <button class="button" >Login</button>
+        </form>
       </div>
     </main>
     <script src="index.js"></script>
